--- a/pom.xml
+++ b/pom.xml
@@ -16,5 +16,12 @@
     <version>2.5.3</version>
   </dependency>
   
+  <dependency>
+    <groupId>org.slf4j</groupId>
+    <artifactId>slf4j-simple</artifactId>
+    <version>1.7.21</version>
+  </dependency>
+
+  
   </dependencies>
 </project>
