--- a/pom.xml
+++ b/pom.xml
@@ -10,22 +10,32 @@
   </description>
   <dependencies>
   
-  <dependency>
-    <groupId>com.sparkjava</groupId>
-    <artifactId>spark-core</artifactId>
-    <version>2.5.3</version>
-  </dependency>
-  
-  <dependency>
-    <groupId>org.slf4j</groupId>
-    <artifactId>slf4j-simple</artifactId>
-    <version>1.7.21</version>
-  </dependency>
-
-  <dependency>
-    <groupId>com.sparkjava</groupId>
-    <artifactId>spark-template-velocity</artifactId>
-    <version>2.3</version>
-  </dependency>
+	  <dependency>
+	    <groupId>com.sparkjava</groupId>
+	    <artifactId>spark-core</artifactId>
+	    <version>2.5.3</version>
+	  </dependency>
+	  
+	  <dependency>
+	    <groupId>org.slf4j</groupId>
+	    <artifactId>slf4j-simple</artifactId>
+	    <version>1.7.21</version>
+	  </dependency>
+	
+	  <dependency>
+	    <groupId>com.sparkjava</groupId>
+	    <artifactId>spark-template-velocity</artifactId>
+	    <version>2.3</version>
+	  </dependency>
+	  <dependency>
+	    <groupId>org.jodd</groupId>
+	    <artifactId>jodd-wot</artifactId>
+	    <version>3.3</version>
+	  </dependency>
+  	  <dependency>
+	    <groupId>org.jsoup</groupId>
+	    <artifactId>jsoup</artifactId>
+	    <version>1.8.3</version>
+	  </dependency>
   </dependencies>
 </project>
