--- a/pom.xml
+++ b/pom.xml
@@ -37,5 +37,11 @@
 	    <artifactId>jsoup</artifactId>
 	    <version>1.8.3</version>
 	  </dependency>
+	  <dependency>
+		  <groupId>org.python</groupId>
+		  <artifactId>jython</artifactId>
+		  <version>2.7.0</version>
+	  </dependency>
+	  
   </dependencies>
 </project>
